--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
         "tailwindcss": "^3.4.0",
         "vite": "^5.0",
         "vue": "^3.3.13"
+    },
+    "dependencies": {
+        "filepond": "^4.30.6",
+        "filepond-plugin-file-poster": "^2.5.1",
+        "filepond-plugin-file-validate-type": "^1.2.9",
+        "filepond-plugin-image-preview": "^4.6.12",
+        "vue-filepond": "^7.0.4"
     }
 }
